--- a/demox/src/main/res/layout/fragment_expandablelist.xml
+++ b/demox/src/main/res/layout/fragment_expandablelist.xml
@@ -8,7 +8,7 @@
     <ExpandableListView
         android:id="@+id/expandable_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
