--- a/demox/src/main/res/menu/navigation.xml
+++ b/demox/src/main/res/menu/navigation.xml
@@ -2,17 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_home"
+        android:id="@+id/navigation_recycler"
         android:icon="@drawable/ic_home_black_24dp"
         android:title="@string/title_recycler" />
 
     <item
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_list"
         android:icon="@drawable/ic_dashboard_black_24dp"
         android:title="@string/title_listview" />
 
     <item
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_expandable"
         android:icon="@drawable/ic_notifications_black_24dp"
         android:title="@string/title_expandable" />
 
