--- a/demox/src/main/res/values/values.xml
+++ b/demox/src/main/res/values/values.xml
@@ -7,4 +7,11 @@
         <item>Linux</item>
         <item>OSX</item>
     </string-array>
+    <string-array name="languages">
+        <item>c语言</item>
+        <item>java </item>
+        <item>php</item>
+        <item>xml</item>
+        <item>html</item>
+    </string-array>
 </resources>
