SDK: support enableSDK and optOutTracking.
- modify the Storage classes to support other types of value.
- store the enableFlag in shared preference.
- store the optOutFlag in instance sharedPreference.
- refine flush stratege to wait until the save task is completed.
- empty message queue when opt out tracking.
- support send message to server directly without saving to database.
- support send user_del first when opting out tracking.

Signed-off-by: Peng Wang <wangpeng@thinkingdata.cn>

--- a/demox/src/main/res/layout/activity_main.xml
+++ b/demox/src/main/res/layout/activity_main.xml
@@ -175,4 +175,37 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_flush" />
 
+    <ToggleButton
+        android:id="@+id/enableButton"
+        android:layout_width="180dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+        android:text="ToggleButton"
+        android:textOff="Enable SDK"
+        android:textOn="Disable SDK"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_click_test" />
+
+    <ToggleButton
+        android:id="@+id/buttonOptOut"
+        android:layout_width="180dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:text="ToggleButton"
+        android:textOff="Opt out"
+        android:textOn="Opt In"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_click_test" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="20dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
