--- a/demox/src/main/res/values/colors.xml
+++ b/demox/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="mainColor">#5474F1</color>
+    <color name="tc9">#555555</color>
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
 </resources>
