--- a/demox/src/main/res/values/dimens.xml
+++ b/demox/src/main/res/values/dimens.xml
@@ -3,4 +3,12 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="font_size">15sp</dimen>
+    <dimen name="cornor">5dp</dimen>
+    <dimen name="border">1dp</dimen>
+    <dimen name="common_w">250dp</dimen>
+    <dimen name="common_h">45dp</dimen>
+    <dimen name="common_padding">15dp</dimen>
+    <dimen name="common_margin">35dp</dimen>
+    <dimen name="left_padding">20dp</dimen>
 </resources>
