--- a/demox/src/main/res/layout/activity_main.xml
+++ b/demox/src/main/res/layout/activity_main.xml
@@ -80,9 +80,23 @@
         android:layout_marginRight="16dp"
         android:onClick="setSuperProperties"
         android:text="@string/button_setsuperprop"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_logout" />
+
+    <Button
+        android:id="@+id/button_set_auto_event_prop"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:onClick="setAutoTrackEventProperties"
+        android:text="@string/button_setautoeventprop"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintTop_toBottomOf="@+id/button_logout" />
 
     <Button
