app_end事件优化[javaCrash场景]

--- a/demox/src/main/res/layout/activity_main.xml
+++ b/demox/src/main/res/layout/activity_main.xml
@@ -139,9 +139,23 @@
         android:layout_marginRight="16dp"
         android:onClick="webViewTest"
         android:text="@string/button_webview"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_unset_super" />
+
+    <Button
+        android:id="@+id/button_crash_test"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:onClick="crashTest"
+        android:text="@string/button_crash_test"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintTop_toBottomOf="@+id/button_unset_super" />
 
     <Button
