--- a/demox/src/main/res/values/ta_public_config.xml
+++ b/demox/src/main/res/values/ta_public_config.xml
@@ -39,4 +39,12 @@
 <!--        <item>#duration</item>-->
     </string-array>
     <!-- ThinkingAnalytics TDDisPresetProperties end -->
+
+    <!--  ThinkingAnalytics TDCrashConfig start -->
+    <string-array name="TACrashConfig">
+<!--        <item>java</item>-->
+<!--        <item>anr</item>-->
+<!--        <item>native</item>-->
+    </string-array>
+    <!--  ThinkingAnalytics TDCrashConfig end  -->
 </resources>
